NEW: AJAX communication with MySQL database

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div id="entry"></div>
+<script src="//code.jquery.com/jquery.min.js"></script>
 <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
